--- a/examples/BulkSilicon.ipynb
+++ b/examples/BulkSilicon.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: adsite.jl could not be included; most likely some AD package is missing;\n",
+      "at the moment it needs `ForwardDiff, ReverseDiffPrototype`\n"
+     ]
+    }
+   ],
    "source": [
     "using JuLIP\n",
     "using JuLIP.Potentials: StillingerWeber\n",
@@ -114,7 +123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.0-rc2",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
    "name": "julia-0.5"
   },
