--- a/examples/BulkSilicon.ipynb
+++ b/examples/BulkSilicon.ipynb
@@ -9,20 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: adsite.jl could not be included; most likely some AD package is missing;\n",
-      "at the moment it needs `ForwardDiff, ReverseDiffPrototype`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using JuLIP\n",
     "using JuLIP.Potentials: StillingerWeber\n",
@@ -32,11 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-22.497579307541823"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reference energy\n",
     "#   energy per unit volume of a homogeneous silicon crystal \n",
@@ -47,11 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5736.882723423166"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# cluster with vacancy\n",
     "at = Atoms(\"Si\", cubic=true, repeatcell=(4,4,4), pbc=(true,true,true))\n",
@@ -63,11 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results of Optimization Algorithm\n",
+      " * Algorithm: Conjugate Gradient\n",
+      " * Starting Point: [0.0,0.0, ...]\n",
+      " * Minimizer: [-0.007978565307863903,0.0027122343431377266, ...]\n",
+      " * Minimum: -5.744144e+03\n",
+      " * Iterations: 31\n",
+      " * Convergence: true\n",
+      "   * |x - x'| < 1.0e-32: false\n",
+      "   * |f(x) - f(x')| / |f(x)| < 1.0e-32: false\n",
+      "   * |g(x)| < 1.0e-06: true\n",
+      "   * Reached Maximum Number of Iterations: false\n",
+      " * Objective Function Calls: 94\n",
+      " * Gradient Calls: 63\n"
+     ]
+    }
+   ],
    "source": [
     "# geometry optimisation\n",
     "set_constraint!(at, FixedCell(at))\n",
@@ -77,11 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vacancy Formation Energy without relaxing: 22.4976\n",
+      "Vacancy Formation Energy   with  relaxing: 15.2361\n"
+     ]
+    }
+   ],
    "source": [
     "# defect formation energy \n",
     "println(\"Vacancy Formation Energy without relaxing: \", round(E0 - (length(at)+1)*Eref/2, 4))\n",
@@ -110,15 +152,6 @@
     "* urgently allow arbitrary boxes for Visualise\n",
     "* replace vacancy with interstitial (needs mechanism to add an atom)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
