removed the Atoms constructor that generates a bulk; from now on use only `JuLIP.ASE.bulk`.

--- a/examples/BulkSilicon.ipynb
+++ b/examples/BulkSilicon.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# cluster with vacancy\n",
-    "at = Atoms(\"Si\", cubic=true, repeatcell=(4,4,4), pbc=(true,true,true))\n",
+    "at = bulk(\"Si\", cubic=true) * 4\n",
     "deleteat!(at, length(at) ÷ 2) \n",
     "set_calculator!(at, calc)\n",
     "# energy before relaxing\n",
