remove show = display in Visualise + fix some print that should be show

--- a/examples/BulkSilicon.ipynb
+++ b/examples/BulkSilicon.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# visualise the configuration \n",
-    "JuLIP.Visualise.show(at)"
+    "JuLIP.Visualise.display(at)"
    ]
   },
   {
